# SAGE

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  SAGE.sln  SAGE.vcxproj  SAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpp.hint  new_boost_include.txt  new_lz4_include.txt  new_master_include.txt  new_misc_include.txt  new_pcrio_include.txt  new_sage_include.txt  new_sfml_include.txt  new_standard_include.txt  new_wx_include.txt  new_zlib_includes.txt  sage_notes.txt
global_include/: I_Headers.h
headers/: A_AGE_Frame.h  A_AboutDialog.h  A_BaseMainFrame.h  A_CustomComboBoxes.h  A_CustomTextControls.h  A_CustomWidgets.h  A_DataCopies.hpp  A_DelayedMessageRelay.h  A_EditableVersion.h  A_LinkedCheckBox.h  A_LinkedControl.h  A_Loaders.h  A_Main.h  A_OpenDialog.h  A_OpenSaveDialog.h  A_SaveDialog.h  A_SharedComboPopup.h  A_Sprites.h  A_resource.h  G_AttackOrArmor.h  G_BinaFile.h  G_Bird.h  G_Building.h  G_Civ.h  G_Color.h  G_Compressor.h  G_Creatable.h  G_DamageGraphic.h  G_DatFile.h  G_DeadFish.h  G_DrsFile.h  G_Graphic.h  G_GraphicAttackSound.h  G_GraphicDelta.h  G_IFile.h  G_ISerializable.h  G_LangFile.h  G_Logger.h  G_MapDescription.h  G_PalFile.h  (+35 more)
old_precompile/: note.txt  pch.cpp  pch.h
source/: A_AboutDialog.cpp  A_Animation.cpp  A_Civs.cpp  A_Constructor.cpp  A_CustomComboBoxes.cpp  A_CustomTextControls.cpp  A_CustomWidgets.cpp  A_DelayedMessageRelay.cpp  A_General.cpp  A_Graphics.cpp  A_LinkedCheckBox.cpp  A_LinkedControl.cpp  A_Lists.cpp  A_Loaders.cpp  A_Main.cpp  G_Civ.cpp  (+70 more)
(+8 files in other folders)
