cmake_minimum_required(VERSION 3.10)
project(SAGE)
add_executable(SAGE "source/A_Main.cpp")
# add_library(MyLibrary STATIC mylib.cpp)
# target_link_libraries(MyExecutable MyLibrary)
include_directories("precompile")
include_directories("x64/Debug")
include_directories("x64/Release")
include_directories("headers")
include_directories("Licenses")
# set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")